--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,20 +1,27 @@
 @use "sass:map";
 
 @mixin respond-to($breakpoint) {
-    $breakpoints: (
-      "small": "max-width: 599px",
-      "medium": "min-width: 800px",
-      "large": "min-width: 1000px",
-    );
-  
-    $query: map.get($breakpoints, $breakpoint);
-  
-    @if $query {
-      @media (#{$query}) {
-        @content;
-      }
+  $breakpoints: (
+    "small": "max-width: 599px",
+    "medium": "min-width: 800px",
+    "large": "min-width: 1000px",
+  );
 
-    } @else {
-        @error "No se encontró el breakpoint `#{$breakpoint}`.";
+  $query: map.get($breakpoints, $breakpoint);
+
+  @if $query {
+    @media (#{$query}) {
+      @content;
     }
+
+  } @else {
+      @error "No se encontró el breakpoint `#{$breakpoint}`.";
   }
+}
+
+@mixin flex-container($justify: center, $align: center, $direction: row) {
+  display: flex;
+  justify-content: $justify;
+  align-items: $align;
+  flex-direction: $direction;
+}
