--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,1 +1,29 @@
 @use "globals" as globals; // Importa todo desde globals
+
+footer{
+    background-image: url(../assets/nocheEstrellada.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    position: relative;
+    height: 150px;
+
+    // Contenedor cristal para oscurecer la imagen de fondo
+    .cristalNegro{
+        background-color: globals.$color-background-header;
+
+        width: 100%;
+        height: 100%;
+
+        position: absolute;
+    }
+
+    :not(.cristalNegro){
+        z-index: 1;
+    }
+
+    .container{
+        @include globals.flex-container(space-between, center, row);    
+        padding: globals.$space-md 0;
+    }
+}
