--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,8 +13,7 @@
     src: url(../assets/fonts/Merienda-VariableFont_wght.woff);
 }
 
-/* Mode 1 */
-/* color */
+// Color
 $color-primario: #143458;
 $color-primario-2: #bbdbff;
 $color-primario-3: #061321;
@@ -28,51 +27,87 @@ $color-soporte-3: #f44930;
 $color-soporte-4: #000000;
 $color-background-header: #000000cc;
 
+// FONT
+// $font-size-etiqueta: 1.125rem;
+// $font-size-parrafo-movil: 1.125rem;
+// $font-size-pequenyo: 1.3125rem;
+// $font-size-parrafo: 1.875rem;
+// $font-size-h2: 6rem;
+// $font-size-h1: 9rem;
 
+// $line-height-etiqueta: 1.59375rem;
+// $line-height-pequenyo: 1.96875rem;
+// $line-height-parrafo: 2.8125rem;
+// $line-height-parrafo-movil: 2.8125rem;
+// $line-height-h2: 9rem;
+// $line-height-h1: 13.5rem;
+
+// $font-family-etiqueta: Lato;
+// $font-family-h1: Kristi;
+// $font-family-h2: Kristi;
+// $font-family-parrafo: Merienda;
+// $font-family-parrafo-movil: Merienda;
+// $font-family-pequenyo: Merienda;
+
+$font-styles: (
+  etiqueta: (
+    font-size: 1.12rem,
+    line-height: 1.59375rem,
+    font-family: "Lato"
+  ),
+  parrafo-movil: (
+    font-size: 1.125rem,
+    line-height: 2.8125rem,
+    font-family: "Merienda"
+  ),
+  pequenyo: (
+    font-size: 1.3125rem,
+    line-height: 1.96875rem,
+    font-family: "Merienda"
+  ),
+  parrafo: (
+    font-size: 1.875rem,
+    line-height: 2.8125rem,
+    font-family: "Merienda"
+  ),
+  h2: (
+    font-size: 6rem,
+    line-height: 9rem,
+    font-family: "Kristi"
+  ),
+  h1: (
+    font-size: 9rem,
+    line-height: 13.5rem,
+    font-family: "Kristi"
+  )
+);
+
+// GRID
 /* Mode 1 */
 /* number */
-$font-size-etiqueta: 0.75rem;
-$font-size-parrafo-movil: 0.75rem;
-$font-size-pequenyo: 0.875rem;
-$font-size-parrafo: 1.25rem;
-$font-size-h2: 4rem;
-$font-size-h1: 6rem;
-$font-spacing-etiqueta: 1.0625rem;
-$font-spacing-pequeño: 1.3125rem;
-$font-spacing-parrafo: 1.875rem;
-$font-spacing-parrafo-movil: 1.875rem;
-$font-spacing-h2: 6rem;
-$font-spacing-h1: 9rem;
+$grid-cols: 12;
+$grid-gutter: 1.875rem;
+$grid-width: 5.625rem;
 
-/* string */
-$font-family-etiqueta: Lato;
-$font-family-h1: Kristi;
-$font-family-h2: Kristi;
-$font-family-parrafo: Merienda;
-$font-family-parrafo-movil: Merienda;
-$font-family-pequenyo: Merienda;
-
-/* Mode 1 */
-/* number */
-$grid-cols: 0.75rem;
-$grid-gutter: 1.25rem;
-$grid-width: 3.75rem;
-
-/* Mode 1 */
-/* number */
-$icon-size-small: 0.9375rem;
-$icon-size-normal: 1.5625rem;
-$icon-size-large: 2.1875rem;
+$icon-size-small: 1.40625rem;
+$icon-size-normal: 2.34375rem;
+$icon-size-large: 3.28125rem;
 
 //Spacing
-$space-xxs: 0.25rem;
-$space-xs: 0.5rem;
-$space-sm: 0.75rem;
-$space-md: 1rem;
-$space-lg: 1.5rem;
-$space-xl: 2rem;
-$space-xxl: 3rem;
-$space-xxxl: 4rem;
+$space-xxs: 0.375rem;
+$space-xs: 0.75rem;
+$space-sm: 1.125rem;
+$space-md: 1.5rem;
+$space-lg: 2.25rem;
+$space-xl: 3rem;
+$space-xxl: 4.5rem;
+$space-xxxl: 6rem;
 
-$border-h1: 12px solid $color-secundario;
-$border-img-portada: 1px solid $color-primario;
+// container
+$margin-container: 0 auto; 
+$width-container: 65%;
+
+// Borders
+$border-h1: 0.75rem solid $color-secundario;
+$border-h2: 0.3rem solid $color-secundario;
+$border-img-portada: 0.1rem solid $color-primario;
