--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -42,7 +42,7 @@
 }
 
 // Contenedor grid
-@mixin grid-container() {
+@mixin grid-container($grid-cols) {
   display: grid;
   grid-template-columns: repeat($grid-cols, 1fr);
   grid-auto-rows: 1fr;
@@ -68,4 +68,14 @@
 
   @include font(etiqueta);
   font-weight: 900;
+}
+
+@mixin hero($image){
+  width: 100%;
+  height: 100vh;
+  background-image: url($image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
