--- a/src/styles/_portada.scss
+++ b/src/styles/_portada.scss
@@ -1,13 +1,16 @@
 @use "globals" as globals;
 
 .portada{
+    padding: globals.$space-lg 0;
+    @include globals.hero('../assets/nocheEstrellada.jpg');
+
     h1{
         color: globals.$color-secundario;
+        background-color: globals.$color-background-header;
         
         text-shadow: 5px 5px globals.$color-primario;
         font-weight: 400;
 
-        margin: globals.$space-lg;
         padding: globals.$space-sm;
         text-align: center;
 
@@ -15,8 +18,7 @@
 
         @include globals.respond-to(medium){          
             @include globals.font(h2);
-            border: 0;
-            margin: 0;
+
             padding: 0
         };
     }
