--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -64,6 +64,7 @@
   background-color: $color-secundario;
   color: $color-primario;
   padding: $space-md $space-xxl;
+  border: 0;
   border-radius: 20px;
   cursor: pointer;
 
